{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 20,
  "lineage": "9f1eee6d-bacd-a045-bbaf-bf16e04fa305",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058242845874:internet-gateway/igw-0f86cb5acc6228943",
            "id": "igw-0f86cb5acc6228943",
            "owner_id": "058242845874",
            "tags": {
              "Name": "learn-terraform-igw"
            },
            "vpc_id": "vpc-0da19b76489aad929"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03c4cffac873ca61d",
            "owner_id": "058242845874",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "learn-terraform-rt-private"
            },
            "vpc_id": "vpc-0da19b76489aad929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f370dec353f0df6a",
            "owner_id": "058242845874",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "learn-terraform-rt-public"
            },
            "vpc_id": "vpc-0da19b76489aad929"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea03974b7a9bebcb",
            "route_table_id": "rtb-03c4cffac873ca61d",
            "subnet_id": "subnet-01d68cc9a2b15f0c3"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8bdaaed46845d80",
            "route_table_id": "rtb-0f370dec353f0df6a",
            "subnet_id": "subnet-0efdd3e2bbdf3cd38"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058242845874:subnet/subnet-01d68cc9a2b15f0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-01d68cc9a2b15f0c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058242845874",
            "tags": {
              "Name": "learn-terraform-private-subnet"
            },
            "vpc_id": "vpc-0da19b76489aad929"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058242845874:subnet/subnet-0efdd3e2bbdf3cd38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0efdd3e2bbdf3cd38",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058242845874",
            "tags": {
              "Name": "learn-terraform-public-subnet"
            },
            "vpc_id": "vpc-0da19b76489aad929"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058242845874:vpc/vpc-0da19b76489aad929",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a85c0bf3403dfded",
            "default_route_table_id": "rtb-07bb97bec4f7676fb",
            "default_security_group_id": "sg-01597624ffe86e021",
            "dhcp_options_id": "dopt-20e97a4b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0da19b76489aad929",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07bb97bec4f7676fb",
            "owner_id": "058242845874",
            "tags": {
              "Name": "learn-terraform"
            }
          }
        }
      ]
    }
  ]
}